[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.doks]
command = true
auto = true

[tool.poetry]
name = "tkl"
version = "0.9.0"
description = "A leds/bibliopixel driver for Twinkly lights"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
leds = "^3.5.1"
requests = "^2.28.1"
xled = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
